istio/experiment.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: everything-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 8080
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: everything-vs
spec:
  hosts:
    - "*"
  gateways:
    - everything-gateway
  http:
    - match:
      route:
        - destination:
            host: camunda-keycloak
            port:
              number: 80
