istio/operate.tpl.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: RELEASE-operate-vs
spec:
  hosts:
  - "operate.aws.c8sm.com"
  gateways:
  - RELEASE-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: RELEASE-operate
        port:
          number: 80
