istio/tasklist.tpl.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: RELEASE-tasklist-vs
spec:
  hosts:
  - "tasklist.aws.c8sm.com"
  gateways:
  - RELEASE-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: RELEASE-tasklist
        port:
          number: 80
